[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/SignFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Unna-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
mainControl = NodePath("CenterContainer/Main")
optionsControl = NodePath("CenterContainer/Options")

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 72.0
margin_top = 40.0
margin_right = 960.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="GridContainer" parent="CenterContainer"]
margin_left = 373.0
margin_top = 143.0
margin_right = 514.0
margin_bottom = 369.0
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Main"]
margin_right = 141.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CenterContainer/Main"]
margin_top = 80.0
margin_right = 141.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 1 )
text = "Continue"

[node name="Options" type="Button" parent="CenterContainer/Main"]
margin_top = 132.0
margin_right = 141.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="Exit" type="Button" parent="CenterContainer/Main"]
margin_top = 184.0
margin_right = 141.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="Options" type="GridContainer" parent="CenterContainer"]
visible = false
margin_left = 349.0
margin_top = 169.0
margin_right = 538.0
margin_bottom = 343.0
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Options"]
margin_right = 189.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="I AM OPTION" type="Button" parent="CenterContainer/Options"]
margin_top = 80.0
margin_right = 189.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 1 )
text = "I AM OPTION"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Back" type="Button" parent="CenterContainer/Options"]
margin_top = 132.0
margin_right = 189.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="CenterContainer/Main/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/Main/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/Main/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CenterContainer/Options/Back" to="." method="_on_Back_pressed"]
